# VARCAVIA

./: .dockerignore  .env  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.manual  Justfile  PRODUCTION_TEST_REPORT.md  README.md  SPIDER_AUDIT.md
CONSIGLI/: 02-cde-ai-integration.md  03-uag-improvements.md
_archive/: README.md  node_default.toml
_archive/CONSIGLI/: 01-node-integration.md  04-axum-upgrade.md  05-network-improvements.md  06-semantic-dedup-onnx.md
_archive/proto-unused/: arc.proto  node.proto  vtp.proto
_archive/python-v1/: pyproject.toml  requirements.txt
_archive/python-v1/agents/: coherence_agent.py  dedup_agent.py
_archive/python-v1/cde/: maturation.py
_archive/python-v1/tests/: test_agents.py  test_embeddings.py
configs/: domains.toml  network_local.toml
crates/arc/: Cargo.toml
crates/arc/src/: committee.rs  lib.rs  reputation.rs  resonance.rs  scoring.rs  validation.rs
crates/cde/: Cargo.toml
crates/cde/src/: dedup.rs  freshness.rs  lib.rs  normalize.rs  pipeline.rs  scoring.rs  validation.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: lib.rs  spider.rs  wikidata.rs
crates/ddna/: Cargo.toml
crates/ddna/src/: codec.rs  custody.rs  fingerprint.rs  identity.rs  integrity.rs  lib.rs  semantic.rs  temporal.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/node/: Cargo.toml
crates/node/src/: cli.rs  config.rs  main.rs  network.rs  storage.rs
crates/uag/: Cargo.toml
crates/uag/src/: consensus.rs  graphql.rs  keyword_match.rs  lib.rs  middleware.rs  rest.rs  server.rs  state.rs  translator.rs  trust.rs
crates/vtp/: Cargo.toml
crates/vtp/src/: channel.rs  compression.rs  lib.rs  messages.rs  packet.rs  priority.rs  routing.rs  sync.rs
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  FAQ.md  MCP.md  PROTOCOLS.md  QUICKSTART.md  VERITPROTOCOL.md  openapi.yaml
proto/: ddna.proto
python/agents/: anomaly_agent.py  base_agent.py  classifier_agent.py
python/cde/: embeddings.py  lsh.py
python/utils/: onnx_runtime.py
scripts/: benchmark.sh  run_local_network.sh  seed_production.sh  seed_test_data.py  setup.sh
sdk/curl/: examples.sh
sdk/javascript/: varcavia.js
sdk/python/: varcavia.py
web/dashboard/: index.html  package.json
web/dashboard/src/: App.tsx
web/public/: index.html
