[project]
name = "varcavia-agents"
version = "0.1.0"
description = "VARCAVIA AI Agents — Micro-agenti per pulizia e classificazione dati"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
