[package]
name = "varcavia-cde"
description = "Clean Data Engine — Pipeline di purificazione automatica dei dati"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
varcavia-ddna = { path = "../ddna" }
varcavia-arc = { path = "../arc" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
zstd.workspace = true
blake3.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
