[package]
name = "varcavia-crawler"
description = "Web crawler per popolare VARCAVIA con fatti reali da Wikipedia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
varcavia-uag = { path = "../uag" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
