[package]
name = "varcavia-ddna"
description = "Data DNA — Identità crittografica multi-livello per dati in VARCAVIA"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
sha3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
chrono.workspace = true
half.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
