[package]
name = "varcavia-vtp"
description = "VARCAVIA Transport Protocol — Trasporto dati adattivo multi-percorso"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
varcavia-ddna = { path = "../ddna" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
zstd.workspace = true
blake3.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
